crates/structurizr-analysis/tests/snapshots/workspace_index__workspace_index@cross_file_navigation.snap
---
source: crates/structurizr-analysis/tests/workspace_index.rs
expression: "WorkspaceIndexSetView::from_facts(&facts, &fixture_root)"
---
WorkspaceIndexSetView {
    document_instances: [
        DocumentInstanceView {
            document: "model.dsl",
            instance_ids: [
                0,
            ],
        },
        DocumentInstanceView {
            document: "views.dsl",
            instance_ids: [
                0,
            ],
        },
        DocumentInstanceView {
            document: "workspace.dsl",
            instance_ids: [
                0,
            ],
        },
    ],
    merged_semantic_diagnostics: [],
    instances: [
        WorkspaceIndexView {
            id: 0,
            root_document: "workspace.dsl",
            documents: [
                "workspace.dsl",
                "model.dsl",
                "views.dsl",
            ],
            unique_element_bindings: [
                (
                    "system",
                    "model.dsl::system",
                ),
                (
                    "user",
                    "model.dsl::user",
                ),
            ],
            duplicate_element_bindings: [],
            unique_relationship_bindings: [
                (
                    "rel",
                    "model.dsl::rel",
                ),
            ],
            duplicate_relationship_bindings: [],
            reference_resolutions: [
                ReferenceResolutionView {
                    reference: "model.dsl::user@3:10",
                    status: "resolved model.dsl::user",
                },
                ReferenceResolutionView {
                    reference: "model.dsl::system@3:18",
                    status: "resolved model.dsl::system",
                },
                ReferenceResolutionView {
                    reference: "views.dsl::system@1:18",
                    status: "resolved model.dsl::system",
                },
                ReferenceResolutionView {
                    reference: "views.dsl::user@2:16",
                    status: "resolved model.dsl::user",
                },
                ReferenceResolutionView {
                    reference: "views.dsl::rel@3:16",
                    status: "resolved model.dsl::rel",
                },
            ],
            semantic_diagnostics: [],
        },
    ],
}
