crates/structurizr-analysis/tests/snapshots/workspace_index__workspace_index@inherited_constants.snap
---
source: crates/structurizr-analysis/tests/workspace_index.rs
expression: "WorkspaceIndexSetView::from_facts(&facts, &fixture_root)"
---
WorkspaceIndexSetView {
    document_instances: [
        DocumentInstanceView {
            document: "alpha.dsl",
            instance_ids: [
                0,
            ],
        },
        DocumentInstanceView {
            document: "beta.dsl",
            instance_ids: [
                1,
            ],
        },
        DocumentInstanceView {
            document: "shared/details/alpha-details.dsl",
            instance_ids: [
                0,
            ],
        },
        DocumentInstanceView {
            document: "shared/details/beta-details.dsl",
            instance_ids: [
                1,
            ],
        },
        DocumentInstanceView {
            document: "shared/system.dsl",
            instance_ids: [
                0,
                1,
            ],
        },
    ],
    merged_semantic_diagnostics: [],
    instances: [
        WorkspaceIndexView {
            id: 0,
            root_document: "alpha.dsl",
            documents: [
                "alpha.dsl",
                "shared/system.dsl",
                "shared/details/alpha-details.dsl",
            ],
            unique_element_bindings: [
                (
                    "system",
                    "shared/system.dsl::system",
                ),
            ],
            duplicate_element_bindings: [],
            unique_relationship_bindings: [],
            duplicate_relationship_bindings: [],
            reference_resolutions: [],
            semantic_diagnostics: [],
        },
        WorkspaceIndexView {
            id: 1,
            root_document: "beta.dsl",
            documents: [
                "beta.dsl",
                "shared/system.dsl",
                "shared/details/beta-details.dsl",
            ],
            unique_element_bindings: [
                (
                    "system",
                    "shared/system.dsl::system",
                ),
            ],
            duplicate_element_bindings: [],
            unique_relationship_bindings: [],
            duplicate_relationship_bindings: [],
            reference_resolutions: [],
            semantic_diagnostics: [],
        },
    ],
}
